Added wrappers for more shapes, and removed the .Linux files (user will now edit config.py and Makefile in place.)

--- a/README
+++ b/README
@@ -13,7 +13,6 @@ C++ libraries.
 ==Getting the Code==
 
 Check out a copy of the code from the repository:
-
 {{{
 svn co http://python-wild-magic.googlecode.com/svn/trunk python-wild-magic
 cd python-wild-magic
@@ -21,26 +20,14 @@ cd python-wild-magic
 
 ==Installation==
 
-Copy the configuration file:
-
-{{{
-cp config.py.Linux config.py
-}}}
-
-Edit file `config.py` and set the location 
-of your Wild Magic installation. 
-
-Using Python Distutils, build and install 
-the extension module:
-
+ # Edit file `config.py` and set the location of your Wild Magic installation. 
+ # Using Python Distutils, build and install the extension module:
 {{{
 python setup.py build
 sudo python setup.py install
 python setup.py clean2
 }}}
-
-Test your installation:
-
+ # Test your installation:
 {{{
 python test.py
 }}}
@@ -48,25 +35,12 @@ python test.py
 ==Alternate Build Using Make==
 
 If the above standard installation procedure 
-doesn't work for you, then try the following.
-
-Copy the makefile:
-
-{{{
-cp Makefile.Linux Makefile
-}}}
-
-
-Edit file `Makefile` to reflect locations of 
-needed softwares. Of particular interest are the following
-variables in Third-Party Software section, indicating
-locations of your Python and Wild Magic installations.
- 
- * PY...
- * WM5...
-
-After customizing your makefile, run _Make_:
-
+doesn't work for you, then try the following
+alternate build procedure.
+ # Edit file `Makefile` to reflect locations of needed softwares. Of particular interest are the following variables in _Third-Party Software_ section, indicating locations of your Python and Wild Magic installations.
+  * PY...
+  * WM5...
+ # After customizing your makefile, run _Make_:
 {{{
 make -j8
 make test
