Added more wrappers, mainly due to linking with GL library.

--- a/tools/README
+++ b/tools/README
@@ -7,6 +7,7 @@ gen-xml.py    -  runs GCC-XML on Wild Magic C++ source to
 get-library.py  -  prints a SWIG library file, a starting
                  point for developing an actual working 
                  library file
+get-py-names.py  -  prints a list of names in wm5 Python module
 parse-xml.py  -  parses GCC-XML output to assemble a list
                  of classes in Wild Magic libraries
 tools.py      -  library classes used in above commands
