--- a/tools/README
+++ b/tools/README
@@ -1,15 +1,19 @@
 Contents of this directory:
 ---------------------------
+__init__.py   -  needed to treat this directory as a Python module
 compare.py    -  compares content of Python extension module
                  with content of Wild Magic C++ namespace 
+cpp2py        -  methods for translation of C++ to Python
+create-docs.py   -  generates Sphinx documentation pages
 create-xml.py -  runs GCC-XML on Wild Magic C++ source to
                  produce XML representation of the code
 get-coverage.py  -  prints code coverage information
 get-py-names.py  -  prints a list of names in wm5 Python module
+master.py     -  threads and processes used for analysis
 parse-xml.py  -  parses GCC-XML output to assemble a list
                  of classes in Wild Magic libraries
 patch-wm5.py  -  patches the Wild Magic C++ code to allow it
                  work with the wrapper
-tools.py      -  library classes used in above commands
+util.py       -  a set of generic utilities
 version.py    -  versioning module
 README        -  this README file
