--- a/README
+++ b/README
@@ -8,11 +8,11 @@ the project website at:
 Contents of this directory:
 ---------------------------
 config.py  -  configuration file for installation using Distutils
-docs/      -  Sphinx documentation source
-pics/      -  contains pictures
+doc/       -  Sphinx documentation source
+pic/       -  contains pictures
 README     -  this readme file
 setup.py   -  Distutils installer
 special.i  -  auxiliary SWIG interface file with extra directives
-tests/     -  contains test codes and translated C++ samples
-tools/     -  contains utility code and tools
+test/      -  contains test codes and translated C++ samples
+tool/      -  contains utility code and tools
 wm5.i      -  main SWIG interface file
